# web-status-checker

./: Dockerfile  README.md  WebCrawler.py  link_report.html  link_report_2025-04-30_13-38-02.html  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  run_web_status_checker_mac.command  run_web_status_checker_windows.bat  setup.cfg
templates/: report.html
test-results/: link_info.json  link_report_2025-05-20_10-55-57.html  link_report_2025-05-20_17-26-00.html  link_report_2025-05-20_17-27-30.html  link_report_2025-05-23_16-48-39.html
tests/: webcrawler.spec.ts
web_status_checker/: WebCrawler.py
web_status_checker/web_status_checker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
